# Asystent

./: .dockerignore  .dockerignore.optimized  .env  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_MODULE_TEST_REPORT.md  ARCHITECTURE_STATUS.md  ASK_FOR_CLARIFICATION_DOCS.md  CHANGELOG.md  CLEANUP_COMPLETION_REPORT.md  CLEANUP_SUMMARY.md  CLIENT_FIXES_SUMMARY.md  CLIENT_SERVER_CLEANUP.md  COMPLIANCE_REPORT.md  COMPREHENSIVE_AUDIT_REPORT.md  DAY_SUMMARY_IMPLEMENTATION.md  Dockerfile  Dockerfile.optimized  Dockerfile.production  FINAL_SYSTEM_TEST_REPORT.md  ISSUES_TO_TRACK.md  MANUAL_TEST_GUIDE.md  MICROPHONE_SETUP.md  MIGRATION_GUIDE.md  MVP_FIXES_FINAL_REPORT.md  NAPRAWY_RAPORT.md  OPTYMALIZACJA_AUDIO_RAPORT.md  OVERLAY_CLICK_THROUGH_FIX.md  OVERLAY_CLICK_THROUGH_FIX_COMPLETE.md  OVERLAY_CLICK_THROUGH_FIX_FINAL.md  OVERLAY_COMPLETE_SUCCESS.md  OVERLAY_DEBUG_SUCCESS.md  OVERLAY_DEBUG_SUMMARY.md  OVERLAY_FIXES_COMPLETE_REPORT.md  OVERLAY_FIXES_SUMMARY.md  OVERLAY_INPUT_FIX_SUCCESS.md  OVERLAY_TASKBAR_COMPLETE_SUCCESS.md  (+269 more)
.github/workflows/: ci-cd-fixed.yml  ci-cd.yml
Finishing_Touches_Guideline/: client_testing_todo.md  server_testing_todo.md  todo.md
api/: user_mode_api.py
archive/: PLUGIN_COMPLIANCE_REPORT.md  core_module_old.py
audio_modules/: __init__.py  beep_sounds.py  enhanced_tts_module.py  enhanced_whisper_asr.py  list_audio_devices.py  sounddevice_loader.py  speech_recognition.py  tts_module.py  wakeword_detector.py  whisper_asr.py
client/: README.md  active_window_module.py  client_config.json  client_config.template.json  client_main.py  client_main_backup.py  config.py  list_audio_devices.py  requirements_client.txt  shared_state.py  simple_client.py  simple_client_fixed.py  simple_client_test.py  test_client_like.py  test_device_14.py  test_manual_server_query.py  test_manual_trigger.py  test_manual_trigger_simple.py  test_pipeline.py  test_simple_trigger.py  test_wakeword_only.py  test_websocket.py  trigger_test.py
client/audio_modules/: advanced_wakeword_detector.py  beep_sounds.py  bing_tts_module.py  ffmpeg_installer.py  (+10 more)
config_backups/: config.json.backup  server_config.json.backup
configs/: core_storage.json  user_modes.json
databases/: encrypted_api_keys.json  users.json
demos/: README.md
docker/: Dockerfile  init-db.sql  logrotate.conf  nginx.conf  supervisor.conf
docs/: OPTIMIZED_AUDIO_MODULES.md  README.md  SECURITY.md  daily-briefing-ai-integration.md  update-summary.md
examples/: demo_optimized_audio.py
gaja_client/: client_config.json
modules/: active_window_module.py  api_integrations_config.json  api_module.py  core_module.py  daily_briefing_module.py  daily_briefing_module_broken.py  daily_briefing_module_fixed.py  daily_briefing_module_old.py  deepseek_module.py  memory_module.py  music_module.py  onboarding_module.py  open_web_module.py  screenshot_module.py  search_module.py  see_screen_module.py  test_error_module.py  test_module.py  weather_module.py
overlay/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tauri.conf.json  test.html  vite.config.js
overlay/src/: App.jsx  main.rs  settings.html  style.css
reports/: CONCURRENT_USERS_TEST_REPORT.md  ENHANCED_TTS_INTEGRATION_SUMMARY.md  FINAL_PERFORMANCE_SUMMARY.md  README.md
scripts/: resource_monitor.py
server/: README.md  advanced_memory_system.py  ai_module.py  config_loader.py  config_loader_new.py  daily_briefing_module.py  database_manager.py  database_manager_backup.py  database_models.py  day_narrative_module.py  day_summary_module.py  debug_function_registry.py  environment_manager.py  extended_webui.py  function_calling_system.py  onboarding_module.py  plugin_manager.py  plugin_monitor.py  plugin_protocol.py  proactive_assistant_module.py  proactive_assistant_simple.py  prompts.py  requirements_server.txt  routines_learner_module.py  server_config.json  server_config.template.json  server_main.py  server_main_clean.py  server_main_working.py  test_ai_functions.py  test_end_to_end_ai.py  test_function_calling.py  test_functions.py  test_new_modules.py  test_server_simple.py  test_server_startup.py  user_behavior_module.py  websocket_manager.py  webui.html
tests/: README.md  ai_breaking_tests.py  api_security_attacks.py  devide_ID.py  docker_stress_tests.py  docs_endpoint_attacks.py  extreme_load_test.py  http_stress_tests.py  stress_test_comprehensive.py  test_client_handlers.py  test_function_calling_fixed.py  test_mode_integrator.py  test_overlay_debug_tools.py  test_status_logging.py  test_wakeword_detector.py  test_websocket_basic.py
tests_integration/: test_deepseek_integration.py
tests_pytest/: COMPLETE_MISSION_ACCOMPLISHED.md  FINAL_CLIENT_TEST_REPORT.md  FINAL_REPORT.md  FINAL_SERVER_TEST_REPORT.md  FUNCTION_CALLING_TEST_README.md  MISSION_ACCOMPLISHED.md  README.md  STRESS_TEST_README.md  client_validation_report_20250624_172842.md  client_validator.py  comprehensive_server_validator.py  comprehensive_stress_test_report_20250624_223030.json  conftest.py  final_test.py  function_calling_test_results_20250624_195525.json  manual_test_open_web_module.py  quick_function_calling_test.py  resource_monitor_report_20250624_223030.json  run_comprehensive_server_tests.py  run_comprehensive_stress_test.py  server_config.json  server_manager.py  server_test_report.md  server_validation_report_20250624_170221.md  system_resource_monitor.py  test_advanced_memory_system_pytest.py  test_ai_module.py  test_api_module.py  test_api_module_pytest.py  test_api_transform_pytest.py  test_audio.py  test_audio_module_pytest.py  test_benchmarks_pytest.py  test_build_system_pytest.py  test_client.py  test_client_comprehensive.py  test_core_module.py  test_core_module_pytest.py  test_daily_briefing_ai.py  test_deepseek_module_pytest.py  (+46 more)
tests_unit/: test_api_module.py  test_deepseek_module.py  test_search_module.py  test_see_screen_module.py
user_data/: performance_stats.jsonl  prompts_log.txt  user_inputs_log.txt
web_ui/: __init__.py  app.py  users.json
web_ui_legacy/: __init__.py  app.py  users.json
(+142 files in other folders)
