[package]
name = "gaja-overlay"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "1.0", features = ["api-all", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
winapi = { version = "0.3", features = ["winuser", "windef", "handleapi"] }
windows-sys = { version = "0.48", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
raw-window-handle = "0.5"
futures-util = "0.3"

[build-dependencies]
tauri-build = { version = "1.0", features = [] }

[[bin]]
name = "gaja-overlay"
path = "src/main.rs"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
